--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,8 @@ on:  # yamllint disable-line rule:truthy
   push:
     branches:
     - main
+  schedule:
+  - cron: 0 8 * * *
 
 jobs:
   release:
@@ -15,6 +17,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Release
+      if: ${{ github.event_name != 'schedule' }}
       id: release
       uses: ahmadnassri/action-semantic-release@v1
       env:
@@ -33,7 +36,8 @@ jobs:
         platforms: all
     - name: Setup buildx
       uses: docker/setup-buildx-action@v1
-    - name: Docker meta
+    - name: Docker meta -- regular release
+      if: ${{ github.event_name != 'schedule' }}
       id: meta
       uses: crazy-max/ghaction-docker-meta@v3
       with:
@@ -42,6 +46,16 @@ jobs:
           type=semver,pattern={{version}},value=${{ steps.release.outputs.release-version }}
           type=ref,event=branch
           type=sha
+    - name: Docker meta -- cron release
+      if: ${{ github.event_name == 'schedule' }}
+      id: meta
+      uses: crazy-max/ghaction-docker-meta@v3
+      with:
+        images: kong/fpm
+        tags: |
+          type=ref,event=branch
+          type=sha
+
     - name: Build Only
       uses: docker/bake-action@v1
       with:
@@ -50,7 +64,7 @@ jobs:
           ${{ steps.meta.outputs.bake-file }}
         targets: build
     - name: Build & Push
-      if: steps['release']['outputs']['published'] == 'true'
+      if: steps['release']['outputs']['published'] == 'true' || ${{ github.event_name != 'schedule' }}
       uses: docker/bake-action@v1
       with:
         push: 'true'
